fixed filter stroke on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,10 @@ header {
 
 #filter-stroke {
     background: #dddddd;
-    height: 56px;
+    min-height: 56px;
     margin: 0;
-    top: 56px;
     width: 100%;
-    position: absolute;
+    position: relative;
     display: none;
 }
 
