--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,7 +1,7 @@
 section.grid {
     width: 85%;
     display: grid;
-    margin: 75px auto 0;
+    margin: 50px auto 0;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 50px;
 }
